@@ -1,4 +1,6 @@
 DIST 389-ds-console-1.2.0.tar.bz2 784763 RMD160 e9dca6b39fdec45f20e353edc99a0d048e522521 SHA1 403c493f69b94747ea9078799a1f871b71a71d73 SHA256 7db936ec197d066d286305d59294307242ab2786eb866d86411f5a64e04ab408
+DIST 389-ds-console-1.2.3.tar.bz2 786681 RMD160 4b6a496b38c661bdecffd8fc91b803cc2aa6e4fd SHA1 9d433a142a92c7b6a2cc46927dba4140da05810b SHA256 a866e4cbef6445d8540b250c0f4ea9617501f6ea1b9c183b4745455bb59eefed
 EBUILD 389-ds-console-1.2.0-r1.ebuild 2037 RMD160 5d2401fd48d747e76eab738a22829ef692037aab SHA1 26583504aa614f1c0797e23c1cdec946f69dae70 SHA256 cd59fa493f7011a9350d3c79ba1eeefe48db89d505aeb17e1da516981f7b40f8
-MISC ChangeLog 2534 RMD160 01abfa19414f3256152a27aecffc165a507fe6d8 SHA1 878b38d34870a1742768fe77cda18cce34823d53 SHA256 1600af9ecbe4fb4e3f29f78b88c8a69e5c05d8e08493eada2ba02877b68e50bb
+EBUILD 389-ds-console-1.2.3.ebuild 2037 RMD160 5d2401fd48d747e76eab738a22829ef692037aab SHA1 26583504aa614f1c0797e23c1cdec946f69dae70 SHA256 cd59fa493f7011a9350d3c79ba1eeefe48db89d505aeb17e1da516981f7b40f8
+MISC ChangeLog 2658 RMD160 c84af10c83804471b0d2f071e29c30ceda8f2dd5 SHA1 6e0e0f2dfc2a05a7d0e2252ffc15f27bd086ed11 SHA256 687033455b6a448f37a9d98d05dffc57f4845c6f34eefbc79c14ad1d66361814
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
